Fne bug fixes updated mahendra sprint7 (#211)
* print preview related UI changes

print preview related UI changes

* print preview related UI changes

print preview related UI changes

* FNE 565 changes

FNE 565 changes

* FNE 565 changes

FNE 565 changes

* FNE 565 related changes

FNE 565 related changes

* print preview related changes

print preview related changes

* print preview test 

print preview test

* print preview changes

print preview changes

* print preview changes

print preview changes

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint 7 bug fixing

sprint 7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* print preview and FNE 192 ans FNE 262 bug fixes

print preview and FNE 192 ans FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

print preview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 bug fixes

* printpreview, FNE192 and FNE 262 bug fixes

printpreview, FNE192 and FNE 262 b

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -34,7 +34,7 @@
   <div class="app__side-nav">
     <app-sidebar (status)='onNotify($event)'></app-sidebar>
   </div>
-  <main>
+ <main>
     <div class="app__content-wrapper">
       <div class="app__committee-info">
         <div class="committee-id">
@@ -43,7 +43,39 @@
         <div class="committee-name">
           {{ committeeName }}
         </div>
+        <div  class="committee-name" textalign="right" *ngIf="(showForm3XDashBoard===true)" >
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+              &nbsp; &nbsp;
+              &nbsp; &nbsp; &nbsp; &nbsp;
+               {{ form3XReportDashBoardLine1 }}
+        </div>
       </div>
+      <div class="app__committee-info">
+   
+          <div  class="committee-name" textalign="right" *ngIf="(showForm3XDashBoard===true)" >
+              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp;
+                
+                {{ form3XReportDashBoardLine2 }}
+          </div>
+        </div> 
+      
+
       <div class="app__content">
         <router-outlet></router-outlet>
       </div>
