--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -1,185 +1,211 @@
-<div class="report-type-sidebar">
-  <header>
-    <h3 class="text-center">{{ title }}</h3>
-    <hr />
-  </header>
-  <section><!-- Start: Wizard Sidebar Report Coverage Dates -->
-    <form class="sidebar-form-content">
-      <ng-container *ngIf="(regularreports===true)">
-        <div class="form-row">
-          <label for="dateFrom">Date From* </label>
-          <button
-          type="button"
-          class="btn-info"
-          ngbTooltip="Language will be provided by RAD"
-
-        >
-          <i class="info-icon" aria-hidden="true"></i>
-          <span class="sr-only">
-            Click for more information
-          </span>
-        </button>
-        </div>
-        <div class="form-row">
-          <i class="fas fa-calendar-alt"></i>
-          <input type="text"
-          name="txtfromdate"
-          value={{fromDate}}
-          class="form-control"
-          aria-label="Contribution Date"/>
-        </div>
-        <div class="form-row">
-          <label for="dateTo">Date To* </label>
-          <button
-          type="button"
-          class="btn-info"
-          ngbTooltip="Language will be provided by RAD"
-
-        >
-          <i class="info-icon" aria-hidden="true"></i>
-          <span class="sr-only">
-            Click for more information
-          </span>
-        </button>
-        </div>
-        <div class="form-row">
-          <i class="fas fa-calendar-alt"></i>
-          <input type="text"
-          name="txttodate"
-          value={{toDate}}
-          class="form-control"
-          aria-label="Contribution Date">
-        </div>
-      </ng-container> <!-- regular reports -->
-      <ng-container *ngIf="specialreports===true">
-        <div class="form-row">
-          <label for="State">
-            State*
-            <button
+  
+  <div class="report-type-sidebar">
+      <header>
+        <h3 class="text-center">{{ title }}</h3>
+        <hr />
+      </header>
+      <section><!-- Start: Wizard Sidebar Report Coverage Dates -->
+        <form class="sidebar-form-content">
+          <ng-container *ngIf="(regularreports===true)">
+            <div class="form-row">
+              <br />
+              <label for="dateFrom">Date From* </label>
+              <button
               type="button"
               class="btn-info"
-              ngbTooltip="Language will be provided by RAD"
+              ngbTooltip="Close of books for the report being filed."
+    
             >
               <i class="info-icon" aria-hidden="true"></i>
               <span class="sr-only">
-              Click for more information
+                Click for more information
               </span>
             </button>
-          </label>
-        </div>
-        <div class="form-row">
-          <select
-            id="state"
-            [(ngModel)]="selectedElectionState"
-            name="state"
-            class="form-control state-select"
-            #electionState
-            (change)="selectStateChange($event.target.value)"
-          >
-            <option value="---">--- </option>
-            <option *ngFor='let state of selectedreporttype.election_state' [value]="state.state">{{state.state_description}}</option>
-          </select>
-        </div>
-        <div class="form-row">
-          <label for="electionDate">
-            Election Date
-            <button
-            type="button"
-            class="btn-info"
-            ngbTooltip="Language will be provided by RAD"
-            >
-              <i class="info-icon" aria-hidden="true"></i>
-              <span class="sr-only">
-              Click for more information
-              </span>
-            </button>
-          </label>
-        </div>
-        <div class="form-row">
-          <select id="electiondate" [(ngModel)]="selectedElectionDate" name="electiondate"  class="form-control election-date-select" #electionDate (change)="selectElectionDateChange($event.target.value)">
-            <option ngvalue="---">--- </option>
-            <option *ngFor='let electiondate of electiondates.dates' [value]="electiondate.election_date">{{electiondate.election_date}}</option>
-          </select>
-        </div>
-        <div class="form-row">
-          <label for="dateFrom">
-            Date From*
-            <button
-            type="button"
-            class="btn-info"
-            ngbTooltip="Language will be provided by RAD"
-            >
-              <i class="info-icon" aria-hidden="true"></i>
-              <span class="sr-only">
-              Click for more information
-              </span>
-            </button>
-          </label>
-        </div>
-        <div class="form-row">
-        <i class="calendar-icon"></i>
-        <input
-          type="date"
-          name="txtfromdate"
-          value={{fromDate}}
-          class="form-control"
-          aria-label="Contribution Date"
-        />
-        </div>
-        <div class="form-row">
-          <label for="dateTo">
-            Date To*
-            <button
+            </div>
+            <div class="form-row">
+              <i class="fas fa-calendar-alt"></i>
+
+              <input type="text"
+              name="txtfromdate"
+              value={{fromDate}}
+              (change)="fromDateChange($event.target.value)"
+              class="form-control"
+              aria-label="Contribution Date"/>
+            </div>
+            <div class="form-row">
+                <br />
+              <label for="dateTo">Date To* </label>
+              <button
               type="button"
               class="btn-info"
-              ngbTooltip="Language will be provided by RAD"
+              ngbTooltip="Three day after the close of books of the last report filed by the committee. 
+              If the report is the first one filed by a committee, then the reporting period begins with
+               the date of the committee’s first activity."
+    
             >
               <i class="info-icon" aria-hidden="true"></i>
               <span class="sr-only">
-              Click for more information
+                Click for more information
               </span>
             </button>
-          </label>
-        </div>
-        <div class="form-row">
-        <i class="calendar-icon"></i>
-        <input
-          type="date"
-          name="txttodate"
-          value={{toDate}}
-          class="form-control"
-          aria-label="Contribution Date"
-        />
-        </div>
-      </ng-container>
-    </form>
-    </section>
-    <footer>
-      <div class="form-sidebar__item">
-        <div class="form-sidebar-item__text">
-          Cash On Hand
-        </div>
-        <div class="form-sidebar-item__value">
-          $0
-        </div>
+            </div>
+            <div class="form-row">
+              <i class="fas fa-calendar-alt"></i>
+              <input type="text"
+              name="txttodate"
+              (change)="fromDateChange($event.target.value)"
+              value={{toDate}}
+              class="form-control"
+              aria-label="Contribution Date">
+            </div>
+          </ng-container> <!-- regular reports -->
+          <ng-container *ngIf="specialreports===true">
+            <div class="form-row">
+                <br />
+              <label for="State">
+                State*
+                <button
+                  type="button"
+                  class="btn-info"
+                  ngbTooltip="Language will be provided by RAD"
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
+            </div>
+            <div class="form-row">
+                <select 
+                id="state" 
+                [(ngModel)]="selectedElectionState" 
+                name="state" 
+                class="form-control" 
+                #electionState (change)="selectStateChange($event.target.value)"
+                >
+                <option value="---">--- </option>
+                <option *ngFor='let state of selectedreporttype.election_state' [value]="state.state">{{state.state_description}}</option>
+               </select>
+            </div>
+      
+
+            <div class="form-row">
+                <br />
+              <label for="electionDate">
+                Election Date
+                <button
+                type="button"
+                class="btn-info"
+                ngbTooltip="Language will be provided by RAD"
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
+            </div>
+             <div class="form-row">
+                <select 
+                id="electiondate" 
+                [(ngModel)]="selectedElectionDate" 
+                name="electiondate" 
+                [disabled]="isDisabled" 
+                class="form-control" 
+                #electionDate (change)="ElectionDateChange($event.target.value)"
+                >
+                   <option ngvalue="---">--- </option>
+                   <option *ngFor='let dateSelected of electiondates' [value]="dateSelected.election_date">{{dateSelected.election_date}}</option>
+               </select> 
+             
+           </div>            
+            <div class="form-row">
+                <br />
+              <label for="dateFrom">
+                Date From*
+                <button
+                type="button"
+                class="btn-info"
+                ngbTooltip="Close of books for the report being filed."
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
+            </div>
+            <div class="form-row">
+            <i class="calendar-icon"></i>
+            <input
+              type="date"
+              name="txtfromdate"
+              value={{fromDate}}
+              (change)="fromDateChange($event.target.value)"
+              class="form-control"
+              aria-label="Contribution Date"
+            />
+            </div>
+            <div class="form-row">
+                <br />
+              <label for="dateTo">
+                Date To*
+                <button
+                  type="button"
+                  class="btn-info"
+                  ngbTooltip="Three day after the close of books of the last report filed by the committee. 
+                  If the report is the first one filed by a committee, then the reporting period begins with
+                   the date of the committee’s first activity."
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
+            </div>
+            <div class="form-row">
+            <i class="calendar-icon"></i>
+            <input
+              type="date"
+              name="txttodate"
+              (change)="toDateChange($event.target.value)"
+              value={{toDate}}
+              class="form-control"
+              aria-label="Contribution Date"
+            />
+            </div>
+          </ng-container>
+        </form>
+        </section>
+        <footer>
+          <div class="form-sidebar__item">
+            <div class="form-sidebar-item__text">
+              Cash On Hand
+            </div>
+            <div class="form-sidebar-item__value">
+              $0
+            </div>
+          </div>
+          <div class="form-sidebar__btns">
+            <div class="btn-row">
+              <button
+                type="button"
+                class="btn btn-secondary-gray"
+              >
+                Summary
+              </button>
+            </div>
+            <div class="btn-row">
+              <button
+                type="button"
+                class="btn btn-secondary"
+              >
+                Sign &amp; Submit
+              </button>
+            </div>
+          </div>
+        </footer>
       </div>
-      <div class="form-sidebar__btns">
-        <div class="btn-row">
-          <button
-            type="button"
-            class="btn btn-secondary-gray"
-          >
-            Summary
-          </button>
-        </div>
-        <div class="btn-row">
-          <button
-            type="button"
-            class="btn btn-secondary"
-          >
-            Sign &amp; Submit
-          </button>
-        </div>
-      </div>
-    </footer>
-  </div>
+    
