--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
@@ -21,8 +21,8 @@
       label {
         margin: 0 auto;
       }
-      .state-select,
-      .election-date-select {
+      #state,
+      #electiondate {
         margin: 0 auto !important;
         width: 200px !important;
       }
