--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -3,8 +3,20 @@
     <header>
       <div class="header-content">
         <div class="float-left">
-          <h1>Report Type:{{reportType}}</h1>
+          <h1>Report Type:&nbsp;&nbsp;{{reportType}}&nbsp;
+            <button
+            type="button"
+            class="btn-info"
+            ngbTooltip="Language will be provided by RAD"
+          >
+            <i class="info-icon" aria-hidden="true"></i>
+            <span class="sr-only">
+              Click for more information
+            </span>
+          </button> </h1>
+          
         </div>
+        
         <div class="float-right">
           <button
             type="button"
@@ -46,7 +58,7 @@
               value="{{committee_form3x_reporttype.report_type}}"
               (click)="updateTypeSelected($event)"
               formControlName="reportTypeRadio"
-
+              
             />
                 <label
                   for="{{committee_form3x_reporttype.report_type_desciption}}"
@@ -57,7 +69,7 @@
                   type="button"
                   class="btn-info"
                   ngbTooltip=" {{committee_form3x_reporttype.report_type_info}}"
-
+  
                 >
                   <i class="info-icon" aria-hidden="true"></i>
                   <span class="sr-only">
@@ -91,4 +103,4 @@
       </footer>
     </form>
   </div>
-
+  
