--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -9,18 +9,19 @@
           <ng-container *ngIf="(regularreports===true)">
             <div class="form-row">
               <br />
-              <label for="dateFrom">Date From* </label>
-              <button
-              type="button"
-              class="btn-info"
-              ngbTooltip="Close of books for the report being filed."
-
-            >
-              <i class="info-icon" aria-hidden="true"></i>
-              <span class="sr-only">
-                Click for more information
-              </span>
-            </button>
+              <label for="dateFrom">
+                Date From*
+                <button
+                type="button"
+                class="btn-info"
+                ngbTooltip="Close of books for the report being filed."
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
             </div>
             <div class="form-row">
               <i class="calendar-icon" aria-hidden="true"></i>
@@ -35,20 +36,19 @@
             </div>
             <div class="form-row">
                 <br />
-              <label for="dateTo">Date To* </label>
-              <button
-              type="button"
-              class="btn-info"
-              ngbTooltip="Three day after the close of books of the last report filed by the committee.
-              If the report is the first one filed by a committee, then the reporting period begins with
-               the date of the committee’s first activity."
-
-            >
-              <i class="info-icon" aria-hidden="true"></i>
-              <span class="sr-only">
-                Click for more information
-              </span>
-            </button>
+              <label for="dateTo">
+                Date To*
+                <button
+                type="button"
+                class="btn-info"
+                ngbTooltip="Close of books for the report being filed."
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                  Click for more information
+                  </span>
+                </button>
+              </label>
             </div>
             <div class="form-row">
               <i class="calendar-icon" aria-hidden="true"></i>
