Fne print preview bug fix mahendra sprint7 (#228)
* print preview bug fix

print preview bug fix

* print preview changes

print preview changes

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -99,6 +99,7 @@
               </div>
             </div>
           </div>
+            
           <div class="grid-row">
               <div class="grid-row__col grid-row__col--12"
                 *ngIf="PdfDeleted">
@@ -234,12 +235,13 @@
                 type="submit"
                 [disabled]="frmReason.controls.reasonText.errors?.requiredLength || (! validFile)"
               >
+                  
                Save & Continue
               </button>
             </div>
           </div>
         </div>
-      </footer>modal
+      </footer>
     </form>
   </div> <!-- ./reason-container -->
   
