--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -1,107 +1,101 @@
 <div class="forms__wizard" *ngIf="!loadingData">
-    <div class="form__sidebar">
-      <div *ngIf="step==='step_1'">
-       <report-type-sidebar
-            title="Report Coverage Dates"
-            (status)='onNotify($event)'
-            [stateSelection]="stateSelection"
-            [cashOnHand]="cashOnHand"
-            [specialreports]=specialreports
-            [regularreports]=regularreports
-            [selectedreporttype]=selectedReportType
-            [selectedstate]=selectedstate
-            [electiondates]=electionDates
-            [fromDate]=fromDate
-            [toDate]=toDate
-           
-          >
-        </report-type-sidebar>
-      </div>
-      <div *ngIf="step==='step_2'">
-        <transaction-categories-sidebar
-          [transactionCategories]="transactionCategories"
-          [searchField]="searchField"
-          [cashOnHand]="cashOnHand"
-          title="Transaction Categories"
+  <div class="form__sidebar" *ngIf="step!=='financial_summary'">
+    <div *ngIf="step==='step_1'">
+     <report-type-sidebar
+          title="Report Coverage Dates"
           (status)='onNotify($event)'
+          [specialreports]="specialreports"
+          [regularreports]="regularreports"
+          [stateSelection]="stateSelection"
+          [specialreports]=specialreports
+          [regularreports]=regularreports
+          [selectedreporttype]=selectedReportType
+          [selectedstate]=selectedstate
+          [electiondates]=electionDates
+          [fromDate]=fromDate
+          [toDate]=toDate
         >
-        </transaction-categories-sidebar>
-      </div>
+      </report-type-sidebar>
+    </div>
+    <div *ngIf="step==='step_2' || step==='step_3'">
+      <transaction-categories-sidebar
+        title="Transaction Categories"
+        (status)='onNotify($event)'
+      >
+      </transaction-categories-sidebar>
+    </div>
+  </div>
+  <div
+    class="form__container"
+    [ngClass]="{
+      'show-alerts': showValidateBar === true,
+      'hide-alerts': step==='step_6'
+    }"
+  >
+    <div class="form__steps" *ngIf="step!=='financial_summary'">
+      <app-steps
+        [steps]="[
+          {text: 'Report<br/>type', step: 'step_1'},
+          {text: 'Form', step: 'step_2'},
+          {text: 'Preview', step: 'step_4'},
+          {text: 'Sign', step: 'step_5'},
+          {text: 'Submit', step: 'step_6'}
+        ]"
+        [current_step]="currentStep"
+      >
+      </app-steps>
     </div>
     <div
-      class="form__container"
-      [ngClass]="{
-        'show-alerts': showValidateBar === true,
-        'hide-alerts': step==='step_6'
-      }"
+      class="form__content"
     >
-      <div class="form__steps">
-        <app-steps
-          [steps]="[
-            {text: 'Report<br/>type', step: 'step_1'},
-            {text: 'Transaction<br/>Type', step: 'step_2'},
-            {text: 'Form', step: 'step_3'},
-            {text: 'Preview', step: 'step_4'},
-            {text: 'Sign', step: 'step_5'},
-            {text: 'Submit', step: 'step_6'}
-          ]"
-          [current_step]="currentStep"
-        >
-        </app-steps>
+      <div *ngIf="step==='financial_summary'">
+        <f3x-financial-summary></f3x-financial-summary>
       </div>
       <div
-        class="form__content"
+        class="form__step"
+        [hidden]="step!=='step_1'"
       >
-        <div
-          class="form__step"
-          [hidden]="step!=='step_1'"
-        >
-          <f3x-report-type 
-            [formRadioOptionsVisible]="formRadioOptionsVisible"
-            [reportTypeRadio]="reportTypeRadio"
-            (status)='onNotify($event)'
-            [reportType]=reportType>
-           
-          </f3x-report-type>
-        </div>
-  
-        <div
-          class="form__step"
-          [hidden]="step!=='step_2'"
-        >
-        <f3x-transaction-type
+        <f3x-report-type
+          [formRadioOptionsVisible]="formRadioOptionsVisible"
+          [reportTypeRadio]="reportTypeRadio"
+          (status)='onNotify($event)'
+          [reportType]=reportType>
+
+        </f3x-report-type>
+      </div>
+
+      <div
+        class="form__step"
+        [hidden]="step!=='step_2'"
+      >
+        <f3x-individual-receipt
           [formOptionsVisible]="formOptionsVisible"
           [selectedOptions]="selectedOptions"
           (status)='onNotify($event)'
-        >
-        </f3x-transaction-type>
-        </div>
-  
-        <div
-          class="form__step"
-          [hidden]="step!=='step_3'"
-        ><f3x-form></f3x-form>
-        </div>
-  
-        <div
-          class="form__step"
-          [hidden]="step!=='step_4'"
-        ><f3x-preview></f3x-preview>
-        </div>
-  
-        <div
-          class="form__step"
-          [hidden]="step!=='step_5'"
-        ><f3x-sign></f3x-sign>
-        </div>
-  
-        <div
-          class="form__step"
-          [hidden]="step!=='step_6'"
-        ><f3x-submit></f3x-submit>
-        </div>
-  
+        ></f3x-individual-receipt>
       </div>
-    </div> <!-- ./form__container -->
-  </div> <!-- ./forms__wizard -->
-  
+
+      <div
+        class="form__step"
+        [hidden]="step!=='step_4'"
+      >
+        <f3x-preview></f3x-preview>
+      </div>
+
+      <div
+        class="form__step"
+        [hidden]="step!=='step_5'"
+      >
+        <f3x-sign></f3x-sign>
+      </div>
+
+      <div
+        class="form__step"
+        [hidden]="step!=='step_6'"
+      >
+        <f3x-submit></f3x-submit>
+      </div>
+
+    </div>
+  </div> <!-- ./form__container -->
+</div> <!-- ./forms__wizard -->
