FNE-286 shawn's first changes for view transactions

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -208,7 +208,7 @@
                 <button
                   class="btn btn-default btn-right"
                   type="button"
-                  (click)="previous()"
+                  (click)="viewTransactions()"
                 >
                   View Transactions
                 </button>
