--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -78,13 +78,6 @@
                             <i class="fas fa-filter"></i>
                             Filter
                         </button>
-                        <!-- <div class="input-group forms__trx-search">
-                            <div class="input-group-addon">
-                                <i class="fa fa-search"></i>
-                            </div>
-                            <input id="ao_list_tbl_search_filter"  type="text" 
-                                class="form-control" name="filterModel" placeholder="Type to search...">										
-                        </div>  -->
                         <div class="input-group pl-0 forms__trx-search">
                             <input class="form-control py-1" type="text" placeholder="Search by Transaction" aria-label="Search">
                             <div class="input-group-append">
@@ -109,92 +102,89 @@
                         {{appliedFilterNames[0]}}
                     </button>                    
                 </div> 
-                <table class="table table-striped table-hover table__sortable forms__trx-table">
-                    <thead>
-                        <tr>
-                            <th class="forms__trx-table-checkbox"></th>
-                            <th [class]="getSortClass('type')" 
-                                (click)="changeSortDirection('type')">Type
-                            </th>
-                            <th [class]="getSortClass('transactionId')" 
-                                (click)="changeSortDirection('transactionId')">Transaction ID
-                            </th>
-                            <th [class]="getSortClass('name')" 
-                                (click)="changeSortDirection('name')">Name
-                            </th>
-                            <th [class]="getSortClass('date')" 
-                                (click)="changeSortDirection('date')">Date
-                            </th>
-                            <th [class]="getSortClass('amount')" 
-                                (click)="changeSortDirection('amount')">Amount
-                            </th>
-                            <th [class]=""></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let trx of transactionsModel | paginate: config; let i = index">
-                            <td>
-                                <input [(ngModel)]="trx.selected"
-									    type="checkbox">
-                            </td>
-                            <td>{{trx.type}}</td>
-                            <td>{{trx.transactionId}}</td>
-                            <td>{{trx.name}}</td>
-                            <td>{{trx.date | date: 'MM/dd/yyyy'}}</td>
-                            <td>{{trx.amount | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
-                            <td>
-                                <div class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
-                                    <button class="btn btn-sm btn-secondary" ngbDropdownToggle>
-                                        <i class="fas fa-ellipsis-h"></i>
-                                    </button>
-                                    <div id="forms__trx-dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-                                        <button class="dropdown-item" (click)="cloneTransaction(trx)">
-                                            <i class="fas fa-copy"></i>Clone
-                                        </button>
-                                        <button class="dropdown-item" (click)="linkTransaction(trx)">
-                                            <i class="fas fa-link"></i>Link
-                                        </button>
-                                        <button class="dropdown-item" (click)="viewTransaction(trx)">
-                                            <i class="fas fa-eye"></i>View
-                                        </button>
-                                        <button class="dropdown-item" (click)="editTransaction(trx)">
-                                            <i class="fas fa-edit"></i>Edit
-                                        </button>
-                                        <button class="dropdown-item" (click)="trashTransaction(trx)">
-                                            <i class="fas fa-trash"></i>Trash
-                                        </button>
-                                    </div>
-                                </div>
-       
-
-                                <!-- <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        <i class="fas fa-ellipsis-h"></i>
-                                    </button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Separated link</a>
-                                    </div>
-                                </div> -->
-
-                               
-
-                                <!-- <button
-                                    class="btn btn-sm btn-secondary"
-                                    type="button"
-                                    (click)="showActions()"
-                                >
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </button> -->
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
+            <div class="grid-row float-right">
+                <div class="float-right forms__trx-item-range">
+                    {{determineItemRange()}} of {{config.totalItems}}
+                </div>
+            </div>            
+            <table class="table table-striped table-hover table__sortable forms__trx-table">
+                <thead>
+                    <tr>
+                        <th class="forms__trx-table-checkbox"></th>
+                        <th [class]="getSortClass('type')" 
+                            (click)="changeSortDirection('type')">Type
+                        </th>
+                        <th [class]="getSortClass('transactionId')" 
+                            (click)="changeSortDirection('transactionId')">Transaction ID
+                        </th>
+                        <th [class]="getSortClass('name')" 
+                            (click)="changeSortDirection('name')">Name
+                        </th>
+                        <th [class]="getSortClass('date')" 
+                            (click)="changeSortDirection('date')">Date
+                        </th>
+                        <th [class]="getSortClass('amount')" 
+                            (click)="changeSortDirection('amount')">Amount
+                        </th>
+                        <th [class]=""></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let trx of transactionsModel | paginate: config; let i = index">
+                        <td>
+                            <input [(ngModel)]="trx.selected"
+                                    type="checkbox">
+                        </td>
+                        <td>{{trx.type}}</td>
+                        <td>{{trx.transactionId}}</td>
+                        <td>{{trx.name}}</td>
+                        <td>{{trx.date | date: 'MM/dd/yyyy'}}</td>
+                        <td>{{trx.amount | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
+                        <td>
+                            <div class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+                                <button class="btn btn-sm btn-secondary" ngbDropdownToggle>
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </button>
+                                <div id="forms__trx-dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                                    <button class="dropdown-item" (click)="cloneTransaction(trx)">
+                                        <i class="fas fa-copy"></i>Clone
+                                    </button>
+                                    <button class="dropdown-item" (click)="linkTransaction(trx)">
+                                        <i class="fas fa-link"></i>Link
+                                    </button>
+                                    <button class="dropdown-item" (click)="viewTransaction(trx)">
+                                        <i class="fas fa-eye"></i>View
+                                    </button>
+                                    <button class="dropdown-item" (click)="editTransaction(trx)">
+                                        <i class="fas fa-edit"></i>Edit
+                                    </button>
+                                    <button class="dropdown-item" (click)="trashTransaction(trx)">
+                                        <i class="fas fa-trash"></i>Trash
+                                    </button>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="container">
+                <div class="row forms__trx-total-amount-container">
+                    <div class="col-sm forms__trx-total-amount">
+                        <b>Total Amount</b>
+                        <i class="fas fa-info-circle forms__trx-total-amount" 
+                            ngbTooltip="Represents the total amount of transactions entered on the report. 
+                                Those transactions that are memo entries are not added into the total amount."
+                            tooltipClass="form-tooltip">
+                        </i>
+                    </div>
+                    <div class="col-sm">                    
+                    </div>
+                    <div class="col-sm">
+                        <b>{{totalAmount | currency:'USD':'symbol-narrow':'1.0-0'}}</b>
+                    </div>
+                </div>
+                </div>
             <hr/> 
             <div *ngIf="showPagination()" 
                 class="d-flex justify-content-center forms__trx-table-pagination-container deleteme ">
